// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel="React Simple Dropdown"
  ariaLabelledBy={null}
  buttonClassName="custom-class"
  centerText={false}
  contentClassName={null}
  disabled={true}
  height={null}
  hideArrow={false}
  id="dropdown"
  maxContentHeight={150}
  openUp={false}
  options={
    Array [
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "1",
      },
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "2",
      },
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "3",
      },
    ]
  }
  pageKeyTraverseSize={10}
  placeholder="Custom Placeholder..."
  searchable={true}
  selectedOption={null}
  selectedValueClassName={null}
  setSelected={[Function]}
  style={Object {}}
  width={400}
>
  <div
    className="css-137uxmb"
    onKeyDown={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label="React Simple Dropdown"
      aria-labelledby={null}
      className="custom-class css-cn7df1"
      disabled={true}
      id="dropdown"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <div
        className="css-vh9bzf"
      >
        Custom Placeholder...
      </div>
      <div
        className="css-sfaqia"
      />
    </button>
    <ul
      className="css-pgkk4u"
    >
      <OptionItem
        focused={false}
        key="1"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "1",
          }
        }
        optionClass="className css-orv7bh"
      >
        <button
          aria-label="ariaLabel"
          className="className css-orv7bh"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          title="title"
          type="button"
        >
          <i
            className="fab fa-js-square option-icon"
          />
          1
        </button>
      </OptionItem>
      <OptionItem
        focused={false}
        key="2"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "2",
          }
        }
        optionClass="className css-orv7bh"
      >
        <button
          aria-label="ariaLabel"
          className="className css-orv7bh"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          title="title"
          type="button"
        >
          <i
            className="fab fa-js-square option-icon"
          />
          2
        </button>
      </OptionItem>
      <OptionItem
        focused={false}
        key="3"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "3",
          }
        }
        optionClass="className css-orv7bh"
      >
        <button
          aria-label="ariaLabel"
          className="className css-orv7bh"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          title="title"
          type="button"
        >
          <i
            className="fab fa-js-square option-icon"
          />
          3
        </button>
      </OptionItem>
    </ul>
  </div>
</Dropdown>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel={null}
  ariaLabelledBy={null}
  centerText={false}
  contentClassName={null}
  disabled={false}
  height={null}
  hideArrow={false}
  id={null}
  maxContentHeight={null}
  openUp={false}
  options={Array []}
  pageKeyTraverseSize={10}
  placeholder="Select ..."
  searchable={true}
  selectedOption={null}
  selectedValueClassName={null}
  setSelected={[Function]}
  style={Object {}}
  width={null}
>
  <div
    className="css-1tvgpda"
    onKeyDown={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label={null}
      aria-labelledby={null}
      className="css-cn7df1"
      disabled={false}
      id={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <div
        className="css-vh9bzf"
      >
        Select ...
      </div>
      <div
        className="css-sfaqia"
      />
    </button>
    <ul
      className="css-mqwsxw"
    />
  </div>
</Dropdown>
`;

exports[`Check Props Matches snapshot with grouped options 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel={null}
  ariaLabelledBy={null}
  centerText={false}
  contentClassName={null}
  disabled={false}
  height={null}
  hideArrow={false}
  id={null}
  maxContentHeight={null}
  openUp={false}
  options={
    Array [
      Object {
        "groupOptions": Array [
          Object {
            "value": "1",
          },
          Object {
            "value": "2",
          },
          Object {
            "value": "3",
          },
          Object {
            "value": "4",
          },
          Object {
            "value": "5",
          },
          Object {
            "value": "6",
          },
          Object {
            "value": "7",
          },
          Object {
            "value": "8",
          },
          Object {
            "value": "9",
          },
          Object {
            "value": "10",
          },
        ],
        "label": "numbers",
      },
      Object {
        "groupOptions": Array [
          Object {
            "value": "a",
          },
          Object {
            "value": "b",
          },
          Object {
            "value": "c",
          },
          Object {
            "value": "d",
          },
          Object {
            "value": "e",
          },
          Object {
            "value": "f",
          },
          Object {
            "value": "g",
          },
          Object {
            "value": "h",
          },
          Object {
            "value": "i",
          },
          Object {
            "value": "j",
          },
        ],
        "label": "letters",
      },
    ]
  }
  pageKeyTraverseSize={10}
  placeholder="Select ..."
  searchable={true}
  selectedOption={null}
  selectedValueClassName={null}
  setSelected={[Function]}
  style={Object {}}
  width={null}
>
  <div
    className="css-1tvgpda"
    onKeyDown={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label={null}
      aria-labelledby={null}
      className="css-cn7df1"
      disabled={false}
      id={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <div
        className="css-vh9bzf"
      >
        Select ...
      </div>
      <div
        className="css-sfaqia"
      />
    </button>
    <ul
      className="css-mqwsxw"
    >
      <OptionGroup
        focusedIndex={-1}
        getStyle={[Function]}
        key="numbers"
        onOptionClicked={[Function]}
        optionGroup={
          Object {
            "groupOptions": Array [
              Object {
                "value": "1",
              },
              Object {
                "value": "2",
              },
              Object {
                "value": "3",
              },
              Object {
                "value": "4",
              },
              Object {
                "value": "5",
              },
              Object {
                "value": "6",
              },
              Object {
                "value": "7",
              },
              Object {
                "value": "8",
              },
              Object {
                "value": "9",
              },
              Object {
                "value": "10",
              },
            ],
            "label": "numbers",
          }
        }
        selectedOption={null}
        startingIndex={0}
      >
        <div
          className="css-dckqxd"
        >
          <div
            className="css-1q3omhu"
          >
            <div>
              NUMBERS
               |  
            </div>
            <div>
              10
            </div>
          </div>
          <OptionItem
            focused={false}
            key="1"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "1",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              1
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="2"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "2",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              2
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="3"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "3",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              3
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="4"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "4",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              4
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="5"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "5",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              5
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="6"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "6",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              6
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="7"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "7",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              7
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="8"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "8",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              8
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="9"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "9",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              9
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="10"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "10",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              10
            </button>
          </OptionItem>
          <div
            className="css-iryzig"
          />
        </div>
      </OptionGroup>
      <OptionGroup
        focusedIndex={-1}
        getStyle={[Function]}
        key="letters"
        onOptionClicked={[Function]}
        optionGroup={
          Object {
            "groupOptions": Array [
              Object {
                "value": "a",
              },
              Object {
                "value": "b",
              },
              Object {
                "value": "c",
              },
              Object {
                "value": "d",
              },
              Object {
                "value": "e",
              },
              Object {
                "value": "f",
              },
              Object {
                "value": "g",
              },
              Object {
                "value": "h",
              },
              Object {
                "value": "i",
              },
              Object {
                "value": "j",
              },
            ],
            "label": "letters",
          }
        }
        selectedOption={null}
        startingIndex={10}
      >
        <div
          className="css-dckqxd"
        >
          <div
            className="css-1q3omhu"
          >
            <div>
              LETTERS
               |  
            </div>
            <div>
              10
            </div>
          </div>
          <OptionItem
            focused={false}
            key="a"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "a",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              a
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="b"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "b",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              b
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="c"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "c",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              c
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="d"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "d",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              d
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="e"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "e",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              e
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="f"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "f",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              f
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="g"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "g",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              g
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="h"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "h",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              h
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="i"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "i",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              i
            </button>
          </OptionItem>
          <OptionItem
            focused={false}
            key="j"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "j",
              }
            }
            optionClass="css-orv7bh"
          >
            <button
              className="css-orv7bh"
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={-1}
              type="button"
            >
              j
            </button>
          </OptionItem>
          <div
            className="css-iryzig"
          />
        </div>
      </OptionGroup>
    </ul>
  </div>
</Dropdown>
`;
